data/derived/comb/progs/unify/prog4918.ml.out
Characters 204-205:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int * int -> (int * int) list -> int * (int * int) list
       but an expression was expected of type
         int * int -> (int * int) list -> int * int
       Type (int * int) list is not compatible with type int 
